--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   flutter_secure_storage: ^4.2.1
+  flutter_form_builder: ^7.0.0
+  form_builder_validators: ^7.0.0
 
 dev_dependencies:
   flutter_test:
