--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   flutter_form_builder: ^7.0.0
   form_builder_validators: ^7.0.0
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
