--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_form_builder: ^7.0.0
   form_builder_validators: ^7.0.0
   date_time_picker: ^2.1.0
+  enum_to_string: ^2.0.1
 
 dev_dependencies:
   flutter_test:
