--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^8.3.0
   scroll_app_bar: ^2.0.0
   flutter_staggered_grid_view: ^0.4.1
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
