--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   scroll_app_bar: ^2.0.0
   flutter_staggered_grid_view: ^0.4.1
   loading_overlay: ^0.3.0
+  flutter_rating_bar: ^4.0.0
+  firebase_core: ^1.10.0
+  firebase_messaging: ^11.1.0
+  awesome_notifications: ^0.6.18+2
 
 dev_dependencies:
   flutter_test:
